// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/UILink > renders correctly - basic 1`] = `
<a
  class="ui-link large"
  href="https://test.com"
  tabindex="0"
>
  <strong>
    Test
  </strong>
</a>
`;

exports[`svelte/UILink > renders correctly - disabled 1`] = `
<a
  class="ui-link  disabled"
  href="https://test.com"
  tabindex="-1"
>
  <strong>
    Test
  </strong>
</a>
`;

exports[`svelte/UILink > renders correctly - with id 1`] = `
<a
  class="ui-link "
  href="https://test.com"
  id="test"
  tabindex="0"
>
  <strong>
    Test
  </strong>
</a>
`;

exports[`svelte/UILink > renders correctly - with rel 1`] = `
<a
  class="ui-link "
  href="https://test.com"
  rel="no referrer"
  tabindex="0"
>
  <strong>
    Test
  </strong>
</a>
`;

exports[`svelte/UILink > renders correctly - with target 1`] = `
<a
  class="ui-link "
  href="https://test.com"
  tabindex="0"
  target="_blank"
>
  <strong>
    Test
  </strong>
</a>
`;
